Manejos de entidades listos, falta definir registro de usuario